[f] 760 - Fix horizontal scroll
[#165739760] https://www.pivotaltracker.com/story/show/165739760

--- a/src/components/pinboard-page/pinboard-page.sass
+++ b/src/components/pinboard-page/pinboard-page.sass
@@ -26,6 +26,5 @@
     background-color: $thunder
 
   .pinned-section
-    width: 100%
     min-width: 320px
     margin-left: 8px
